added customization posibility

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "log-prettier",
-  "version": "0.1.0",
-  "description": "Prettier for console logs",
-  "main": "logger.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
+	"name": "log-prettier",
+	"version": "0.1.1",
+	"description": "Prettier for console logs",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
 		"url": "ssh://git@github.com:rostik1410/LogPrettier.git"
-  },
-  "author": "rostik1410",
-  "license": "ISC"
+	},
+	"author": "rostik1410",
+	"license": "ISC"
 }
